# seminarMMDBs

./: README.md  notizen.txt  results.txt  structure.txt  test.txt
Ausarbeitung/: main.aux  main.bbl  main.bib  main.blg  main.out  main.tex  main.txss
Folien/: main.aux  main.tex
implementation/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
implementation/src/: CMakeLists.txt  main.cpp
implementation/src/btree/: BTree.cpp  BTree.h
implementation/src/buffer/: BufferManager.h  DiskManager.h
implementation/test/: CMakeLists.txt  TestBTree.cpp  TestBufferManager.cpp  TestDiskManager.cpp
implementation/ycsb/: CMakeLists.txt
implementation/ycsb/btree/: BTreeDB.cpp  BTreeDB.h
implementation/ycsb/core/: db.h  db_factory.cc  db_wrapper.h  ycsbc.cc
implementation/ycsb/workloads/: workload_custom
java/: log.txt  run.sh  run_cl.sh
java/benchmark/: Benchmark.java
